--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "boom": "^7.3.0",
     "express": "^4.17.1",
     "fastest-validator": "^1.12.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
